2002-08-21  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* tmda-rfilter (autorespond_to_sender): New function.  Determine
	whether to auto-respond based on detection of mailing list/bounce
	messages as well if the auto-response rate limit has been reached.
	
2002-08-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-rfilter (logit): Move guts into TMDA/MessageLogger.

	* tmda-inject (inject_message): Add logging capability.

2002-07-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-rfilter (send_bounce): Consult ADDED_HEADERS_SERVER.

	* tmda-inject (main): Optionally parse the Subject: header for
	X-TMDA override actions.

2002-07-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-ofmipd (SMTPServer.readable): Defer incoming connections if
	the specified threshold is reached.

	Added `-C, --connections' option.

2002-07-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-ofmipd (quote_rcpts): More security improvements.

2002-07-22  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-ofmipd (authfile2dict): Strip whitespace before processing
	each line.
	
2002-07-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-ofmipd (TMDAProxy.process_message): Single-quote each
	recipient on the tmda-inject command line.

	Added `-A, --authprog' option.

	(SMTPChannel.verify_login): Check for authprog before authfile.
	(SMTPChannel.verify_plain): Ditto.
	
2002-07-12  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-ofmipd: Documentation updates.

2002-07-08  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-rfilter (verify_dated_cookie): Log expiration date for a
	good_dated_cookie.

	(send_bounce): Generate In-Reply-To and References header fields
	if possible.

2002-06-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* tmda-filter: Cosmetic improvements.

2002-06-26  Jason R. Mastaler  <jason@mastaler.com>
