@@ -1,3 +1,7 @@
+2002-09-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* tmda-ofmipd.ht: Document `-R' option.
+
 2002-08-27  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
 
 	* inuse.ht (Links): Add Stanford Computer Graphics Laboratory and
