@@ -1,3 +1,8 @@
+2002-09-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* tmda-ofmipd: Add -R option for authentication against a pop3,
+	imap or imaps server.
+
 2002-08-21  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
 
 	* tmda-rfilter (autorespond_to_sender): New function.  Determine
